--- a/react-portfolio/src/component/Navigation.css
+++ b/react-portfolio/src/component/Navigation.css
@@ -6,6 +6,8 @@ nav {
     display: flex;
     justify-content: space-between;
     background-color: #1d809f;
+    align-items: center;
+    padding: 0 20px;
 }
 
 nav ul {
@@ -14,7 +16,7 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    margin-right: 8px;
+    margin-right: 20px;
 }
 
 nav ul li a {
